# maxalert

./: .gitignore  README.md  RELEASE.md  SCAFFOLD_RESULT_20260707.md  TAURI_MIGRATION_PLAN_20260707.md  main.js  package-lock.json  package.json  preload.js
.github/workflows/: release.yml  windows-nsis.yml
assets/: chick.webm  chick_march.webm
lib/: notion.js  store.js
renderer/: api-tauri.js  dashboard.html  postit.html  reward.html  siren.html
renderer/assets/: chick.webm  chick_hevc.mov  chick_march.webm  chick_march_hevc.mov
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logic.rs  main.rs  notion.rs  store.rs
tools/: bake-chroma.js
tools/mac-bridge/: sync.mjs
