[package]
name = "maxalert"
version = "0.1.3"
description = "MaxAlert — 포스트잇 + 코드블루 사이렌 일정 알림 앱"
authors = ["makefriends"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "maxalert_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "rt", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[[bin]]
name = "maxalert"
path = "src/main.rs"

[profile.dev]
incremental = true
